# mcp_bridge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.sh
docs/: ARCHITECTURE.md  CLAUDE_DESKTOP_SETUP.md  PROGRAMMATIC_ACCESS.md  TROUBLESHOOTING.md  claude_desktop_config.example.json  claude_desktop_config_multi_server.example.json
examples/: authenticated-server.json  claude-desktop-config.json  config.example.json  local-server.json
examples/multi-server-setup/: README.md  claude-desktop-config.json  database.json  weather.json
mcp_http_bridge/: mcp_http_bridge.py
src/mcp_bridge/: __init__.py  bridge.py  cli.py
tests/: __init__.py  test_parameter_fix.py  test_weather_tools.py
