[project]
name = "mcp-sse-bridge"
version = "0.1.0"
description = "Generic SSE to stdio bridge for MCP servers"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sseclient-py>=1.8.0",
    "requests>=2.31.0",
    "httpx>=0.28.0",
]

[project.scripts]
mcp-http-bridge = "mcp_http_bridge.mcp_http_bridge:main"

[tool.uv]
package = true
