[project]
name = "mcp-bridge"
version = "0.2.0"
description = "Bridge stdio-based MCP clients to remote HTTP/SSE servers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "MCP Bridge Contributors"}
]
keywords = ["mcp", "model-context-protocol", "claude", "bridge", "http", "sse", "stdio"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.28.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/geosp/mcp-bridge"
Documentation = "https://github.com/geosp/mcp-bridge#readme"
Repository = "https://github.com/geosp/mcp-bridge"
Issues = "https://github.com/geosp/mcp-bridge/issues"

[project.scripts]
mcp-bridge = "mcp_bridge.cli:main"
# Backward compatibility (deprecated)
mcp-http-bridge = "mcp_bridge.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_bridge"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "mypy>=0.990",
]